<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtRebajaAModificar"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Rebaja"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloAModificar" />

    <EditText
        android:id="@+id/txtTituloAModificar"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateInicioAModificar"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/FechaInicio"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRebajaAModificar" />

    <EditText
        android:id="@+id/dateFinAModificar"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/FechaFin"
        android:inputType="date"
        android:onClick="onClickActualizarOferta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateInicioAModificar" />

    <Button
        android:id="@+id/btnVolverPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="246dp"
        android:layout_marginBottom="121dp"
        android:onClick="onClickVolver"
        android:text="@string/btnVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateFinAModificar" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="273dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickborrarOferta"
        android:text="@string/btnBorrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateFinAModificar" />

</androidx.constraintlayout.widget.ConstraintLayout>